Fix a bug that causes the scroll on mobile to not behave properly

--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -6,13 +6,11 @@
 }
 body {
     min-width: 320px;
-    overflow-x: hidden;
 }
 @media screen and (min-width: 140px) {
     body,
     html {
         width: 100vw;
-        overflow-x: hidden;
     }
 }
 html {
